--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
         <div class="links">
           <a href="#about" >ABOUT</a>-
           <a href="#consulting" >SHOP</a>-
-          <a href="#contact" >CONTACT</a>            
+          <a href="https://osintworld.github.io/8080/contact.html" >CONTACT</a>            
         </div>
         <div id="mobile-sidenav" class="mobile-links w3-sand">
           <a href="javascript:void(0)" class="closebtn w3-round" onclick="toggleMobileNavigation()">&times;</a>
           <a href="#about" onclick="toggleMobileNavigation()">ABOUT</a>
           <a href="#consulting" onclick="toggleMobileNavigation()">SHOP</a>
-          <a href="#contact" onclick="toggleMobileNavigation()">CONTACT</a>
+          <a href="https://osintworld.github.io/8080/contact.html" onclick="toggleMobileNavigation()">CONTACT</a>
         </div>
       </nav>
     </section>
