--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <button onclick="goToTop()" id="back-to-top" title="Go to top"><i class="fa fa-toggle-up"></i></button>
       <nav class="nav-container">
         <div class="logo w3-padding-large"> 
-          <p>8080</p>
+          <a href="https://osintworld.github.io/8080/" >8080</a>
         </div>
         <div class="mobile-button">
           <span style="float: right;" onclick="toggleMobileNavigation()">&#9776;</span>
