--- a/shop.html
+++ b/shop.html
@@ -25,13 +25,13 @@
         </div>
         <div class="links">
           <a href="#about" >ABOUT</a>-
-          <a href="#consulting" >SHOP</a>-
+          <a href="https://osintworld.github.io/8080/shop.html" >SHOP</a>-
           <a href="https://osintworld.github.io/8080/contact.html" >CONTACT</a>            
         </div>
         <div id="mobile-sidenav" class="mobile-links w3-sand">
           <a href="javascript:void(0)" class="closebtn w3-round" onclick="toggleMobileNavigation()">&times;</a>
           <a href="#about" onclick="toggleMobileNavigation()">ABOUT</a>
-          <a href="#consulting" onclick="toggleMobileNavigation()">SHOP</a>
+          <a href="https://osintworld.github.io/8080/shop.html" onclick="toggleMobileNavigation()">SHOP</a>
           <a href="https://osintworld.github.io/8080/contact.html" onclick="toggleMobileNavigation()">CONTACT</a>
         </div>
       </nav>
@@ -47,9 +47,6 @@
 <br><h5>8080 Multi Purpose OSINT Tool 
 (Social Media Intelligence, Phone Number Lookups, People Search, Databreach Checkers And Search Engines, Imagery Intelligence Tools, IP Lookups, Metadata Scrapers, Web Crawlers And More.)</h5></br>
 <h5>8080 Brute Force Tool 
-Can crack passwords for various network services 
-telnet, FTP, HTTP, HTTPS, SMB, and more.</h5></br>
-          <h5>8080 Brute Force Tool 
 Can crack passwords for various network services 
 telnet, FTP, HTTP, HTTPS, SMB, and more.</h5></br>
           <h5>8080 Loggers, Phishing Sites, Cookie Loggers, Camera Loggers, Token Loggers</h5></br>
