--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
           <span style="float: right;" onclick="toggleMobileNavigation()">&#9776;</span>
         </div>
         <div class="links">
-          <a href="#about" >ABOUT</a>-
+          <a href="https://osintworld.github.io/8080/#about" >ABOUT</a>-
           <a href="https://osintworld.github.io/8080/shop.html" >SHOP</a>-
           <a href="https://osintworld.github.io/8080/contact.html" >CONTACT</a>            
         </div>
