--- a/contact.html
+++ b/contact.html
@@ -23,13 +23,13 @@
           <span style="float: right;" onclick="toggleMobileNavigation()">&#9776;</span>
         </div>
         <div class="links">
-          <a href="#about" >ABOUT</a>-
+          <a href="https://osintworld.github.io/8080/#about" >ABOUT</a>-
           <a href="https://osintworld.github.io/8080/shop.html" >SHOP</a>-
           <a href="https://osintworld.github.io/8080/contact.html" >CONTACT</a>            
         </div>
         <div id="mobile-sidenav" class="mobile-links w3-sand">
           <a href="javascript:void(0)" class="closebtn w3-round" onclick="toggleMobileNavigation()">&times;</a>
-          <a href="#about" onclick="toggleMobileNavigation()">ABOUT</a>
+          <a href="https://osintworld.github.io/8080/#about" onclick="toggleMobileNavigation()">ABOUT</a>
           <a href="https://osintworld.github.io/8080/shop.html" onclick="toggleMobileNavigation()">SHOP</a>
           <a href="https://osintworld.github.io/8080/contact.html" onclick="toggleMobileNavigation()">CONTACT</a>
         </div>
