--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="hero w3-padding-large w3-container">
       <h1 style="display: inline;"><span><i class="fa fa-check-square-o"></i></span>Put Your Knowledge To Use!</h1>
       <p>Reliable OSINT Investigators And Cybersecurity Researchers</p>
-      <a href="#contact" class="w3-padding-large w3-round">Join Us</a>
+      <a href="https://discord.gg/traced" class="w3-padding-large w3-round">Join Us</a>
     </section>
 
     <section class="about w3-padding-large w3-container" id="about">
