--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
 
       <div class="mySlides">
-        <p><q><em>I learned a lot about OSINT from 8080 they taght me some really useful things about OSINT/SOCMINT.</em></q></p>
+        <p><q><em>I learned a lot about OSINT from 8080 they taught me some really useful things about OSINT/SOCMINT.</em></q></p>
         <p class="author"><strong>- REDACTED</strong></p>
       </div>
 
