--- a/shop.html
+++ b/shop.html
@@ -44,6 +44,7 @@
         </br>
           </br>
           </br>
+           <h5>Contact @osintwrld on discord to negotiate prices</h5></br>
 <br><h5>8080 Multi Purpose OSINT Tool 
 (Social Media Intelligence, Phone Number Lookups, People Search, Databreach Checkers And Search Engines, Imagery Intelligence Tools, IP Lookups, Metadata Scrapers, Web Crawlers And More.)</h5></br>
 <h5>8080 Brute Force Tool 
