--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="mySlides">
-        <p><q><em>8080 Botnet is amazing it was able to hit my targets website offline for a whole day i also love how you can http post flood webhooks with the multi tool its fun to mess with people on discord with!</em></q></p>
+        <p><q><em>8080 Stressor is amazing it was able to hit my targets website offline for a whole day i also love how you can http post flood webhooks with the multi tool its fun to mess with people on discord with!</em></q></p>
         <p class="author"><strong>- REDACTED</strong></p>
       </div>
 
