--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,7 @@
         </br>
           </br>
           </br>
-<br><h5>Email: osintwrld@proton.me</h5></br>
-<h5>Discord: osintwrld</h5></br>
+<br><h5>Discord: osintwrld</h5></br>
       </center>
 
    
