--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         </br>
           </br>
           </br>
-<br><h5>Discord: .billie.227.</h5></br>
+<br><h5>Discord: .unfriended.227.</h5></br>
       </center>
 
    
