--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>8080</title>
+    <title>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧</title>
   <meta name="description"
-   content="welcome to 8080.">
+   content="welcome to ⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Shop!">
   <meta property="og:image"
    content="https://cdn.discordapp.com/attachments/1171259492961366019/1180770577133342771/D11FD686-8F92-492D-ACAA-3116F14F3FDC.jpg?ex=657ea14b&is=656c2c4b&hm=e9cab85c94397143c236aee4748a824ce6de42bdf424520c1925fc958bd476f6&" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
       <button onclick="goToTop()" id="back-to-top" title="Go to top"><i class="fa fa-toggle-up"></i></button>
       <nav class="nav-container">
         <div class="logo w3-padding-large"> 
-          <a href="https://osintworld.github.io/8080/" >8080</a>
+          <a href="https://osintworld.github.io/8080/" >⛧ȶȶȶ⛧</a>
         </div>
         <div class="mobile-button">
           <span style="float: right;" onclick="toggleMobileNavigation()">&#9776;</span>
@@ -62,17 +62,17 @@
       <div class="slideshow-container">
 
       <div class="mySlides">
-        <p><q><em>8080 Remote Access Tool for linux runs well I love using it to troll my friends by remotely running commands on their computers</em></q></p>
+        <p><q><em>⛧ȶȶȶ⛧ Remote Access Tool for linux runs well I love using it to troll my friends by remotely running commands on their computers</em></q></p>
         <p class="author"><strong>- REDACTED</strong></p>
       </div>
 
       <div class="mySlides">
-        <p><q><em>8080 Stressor is amazing it was able to hit my targets website offline for a whole day i also love how you can http post flood webhooks with the multi tool its fun to mess with people on discord with!</em></q></p>
+        <p><q><em>⛧ȶȶȶ⛧ Stressor is amazing it was able to hit my targets website offline for a whole day i also love how you can http post flood webhooks with the multi tool its fun to mess with people on discord with!</em></q></p>
         <p class="author"><strong>- REDACTED</strong></p>
       </div>
 
       <div class="mySlides">
-        <p><q><em>I learned a lot about OSINT from 8080 they taught me some really useful things about OSINT/SOCMINT.</em></q></p>
+        <p><q><em>I learned a lot about OSINT from ⛧ȶȶȶ⛧ they taught me some really useful things about OSINT/SOCMINT.</em></q></p>
         <p class="author"><strong>- REDACTED</strong></p>
       </div>
 
@@ -111,7 +111,7 @@
     </section>
 
     <section class="w3-panel w3-container content why-us" style="padding: 50px;">
-      <h2 style="text-align: center;">- Why choose 8080? -</h2>
+      <h2 style="text-align: center;">- Why choose ⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧? -</h2>
       <div class="container boxes">
         <div class="box w3-round-large">
           More than 1 years of experience
@@ -134,7 +134,7 @@
    
 
     <section class="w3-container footer">
-      <p class="w3-center logo">© 8080 - All rights reserved</p>
+      <p class="w3-center logo">© ⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ - All rights reserved</p>
     </section>
 
 
