--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>8080</title>
+    <title>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -17,7 +17,7 @@
       <button onclick="goToTop()" id="back-to-top" title="Go to top"><i class="fa fa-toggle-up"></i></button>
       <nav class="nav-container">
         <div class="logo w3-padding-large"> 
-          <a href="https://osintworld.github.io/8080/" >8080</a>
+          <a href="https://osintworld.github.io/8080/" >⛧ȶȶȶ⛧</a>
         </div>
         <div class="mobile-button">
           <span style="float: right;" onclick="toggleMobileNavigation()">&#9776;</span>
@@ -49,7 +49,7 @@
    
 
     <section class="w3-container footer">
-      <p class="w3-center logo">© 8080 - All rights reserved</p>
+      <p class="w3-center logo">© ⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ - All rights reserved</p>
     </section>
 
 
