--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
       <button onclick="goToTop()" id="back-to-top" title="Go to top"><i class="fa fa-toggle-up"></i></button>
       <nav class="nav-container">
         <div class="logo w3-padding-large"> 
-          <a href="https://osintworld.github.io/8080/" >8080</a>
+          <a href="https://osintworld.github.io/8080/" > ⛧ȶȶȶ⛧</a>
         </div>
         <div class="mobile-button">
           <span style="float: right;" onclick="toggleMobileNavigation()">&#9776;</span>
@@ -44,32 +44,32 @@
         </br>
           </br>
           </br>
-           <h5>Contact @osintwrld on discord to negotiate prices</h5></br>
-<br><h5>8080 Multi Purpose OSINT Tool 
+           <h5>Contact @.unfriended.227. on discord to negotiate prices</h5></br>
+<br><h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Multi Purpose OSINT Tool 
 (Social Media Intelligence, Phone Number Lookups, People Search, Databreach Checkers And Search Engines, Imagery Intelligence Tools, IP Lookups, Metadata Scrapers, Web Crawlers And More.)</h5></br>
-<h5>8080 Brute Force Tool 
+<h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Brute Force Tool 
 Can crack passwords for various network services 
 telnet, FTP, HTTP, HTTPS, SMB, and more.</h5></br>
-          <h5>8080 Loggers, Phishing Sites, Cookie Loggers, Camera Loggers, Token Loggers</h5></br>
-          <h5>8080 SQLI Tool
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Loggers, Phishing Sites, Cookie Loggers, Camera Loggers, Token Loggers</h5></br>
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ SQLI Tool
 Can find and exploit sql vulnerabilities on websites.</h5></br>
-          <h5>8080 RAT
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ RAT
 Remote Access Trojan </h5></br>
-          <h5>8080 Multi Purpose Penetration Testing Tool</h5></br>
-          <h5>8080 Raid Tool
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Multi Purpose Penetration Testing Tool</h5></br>
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Raid Tool
 Nukes Discord Servers.</h5></br>
-       <h5>8080 Discord SELF BOT</h5></br>
-          <h5>8080 Discord Server Boost Tool </h5></br>
-          <h5>8080 Discord Token Generator</h5></br>
-          <h5>8080 Discord Token Raider</h5></br>
-          <h5>8080 Discord Server Botting Tool</h5></br>
-          <h5>8080 DOS Stressor & Http Flooder</h5></br>
+       <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord SELF BOT</h5></br>
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Server Boost Tool </h5></br>
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Token Generator</h5></br>
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Token Raider</h5></br>
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Server Botting Tool</h5></br>
+          <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ DOS Stressor & Http Flooder</h5></br>
       </center>
 
    
 
     <section class="w3-container footer">
-      <p class="w3-center logo">© 8080 - All rights reserved</p>
+      <p class="w3-center logo">© ⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ - All rights reserved</p>
     </section>
 
 
