--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         </div>
         <div class="links">
           <a href="#about" >ABOUT</a>-
-          <a href="https://osintworld.github.io/8080/shop.html" >SHOP</a>-
+          <a href="https://osintworld.github.io/TopTierTrollers/shop.html" >SHOP</a>-
           <a href="https://osintworld.github.io/8080/contact.html" >CONTACT</a>            
         </div>
         <div id="mobile-sidenav" class="mobile-links w3-sand">
           <a href="javascript:void(0)" class="closebtn w3-round" onclick="toggleMobileNavigation()">&times;</a>
           <a href="#about" onclick="toggleMobileNavigation()">ABOUT</a>
-          <a href="https://osintworld.github.io/8080/shop.html" onclick="toggleMobileNavigation()">SHOP</a>
+          <a href="https://osintworld.github.io/TopTierTrollers/shop.html" onclick="toggleMobileNavigation()">SHOP</a>
           <a href="https://osintworld.github.io/8080/contact.html" onclick="toggleMobileNavigation()">CONTACT</a>
         </div>
       </nav>
