--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button onclick="goToTop()" id="back-to-top" title="Go to top"><i class="fa fa-toggle-up"></i></button>
       <nav class="nav-container">
         <div class="logo w3-padding-large"> 
-          <a href="https://osintworld.github.io/8080/" >⛧ȶȶȶ⛧</a>
+          <a href="https://osintworld.github.io/TopTierTrollers/" >⛧ȶȶȶ⛧</a>
         </div>
         <div class="mobile-button">
           <span style="float: right;" onclick="toggleMobileNavigation()">&#9776;</span>
@@ -29,13 +29,13 @@
         <div class="links">
           <a href="#about" >ABOUT</a>-
           <a href="https://osintworld.github.io/TopTierTrollers/shop.html" >SHOP</a>-
-          <a href="https://osintworld.github.io/8080/contact.html" >CONTACT</a>            
+          <a href="https://osintworld.github.io/TopTierTrollers/contact.html" >CONTACT</a>            
         </div>
         <div id="mobile-sidenav" class="mobile-links w3-sand">
           <a href="javascript:void(0)" class="closebtn w3-round" onclick="toggleMobileNavigation()">&times;</a>
           <a href="#about" onclick="toggleMobileNavigation()">ABOUT</a>
           <a href="https://osintworld.github.io/TopTierTrollers/shop.html" onclick="toggleMobileNavigation()">SHOP</a>
-          <a href="https://osintworld.github.io/8080/contact.html" onclick="toggleMobileNavigation()">CONTACT</a>
+          <a href="https://osintworld.github.io/TopTierTrollers/contact.html" onclick="toggleMobileNavigation()">CONTACT</a>
         </div>
       </nav>
     </section>
