--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>8080</title>
+    <title>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -64,6 +64,7 @@ Nukes Discord Servers.</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Token Raider</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Server Botting Tool</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ DOS Stressor & Http Flooder</h5></br>
+          <h5>We Now Offer Penetration Testing And Scanning Webaites For SQLI And XSS Vulnerabilities</h5>
       </center>
 
    
