--- a/shop.html
+++ b/shop.html
@@ -64,7 +64,7 @@ Nukes Discord Servers.</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Token Raider</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Server Botting Tool</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ DOS Stressor & Http Flooder</h5></br>
-          <h5>We Now Offer Penetration Testing And Scanning Webaites For SQLI And XSS Vulnerabilities</h5>
+          <h5>We Now Offer Penetration Testing And Scanning Websites For SQLI And XSS Vulnerabilities</h5>
       </center>
 
    
