--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h2 style="text-align: center;">- Our Mission -</h2>
         <p style="text-align: center;">We are a grey hat cybersecurity and OSINT group with the mission to just have fun with our knowledge.</p>
         <h3 style="text-align: center;">- About -</h3>
-        <p>8080 is a non profiting group which uses osint (Open Source Intelligence) to help gather publicly available information on specific individuals to later find something more personal and private</p>
+        <p>Top Tier Trollers is a non profiting group which uses osint (Open Source Intelligence) to help gather publicly available information on specific individuals to later find something more personal and private</p>
         <p>we also do cybersecurity research and have breached many sites vulnerable to SQL Injections & More.</p>
       </div>
 
