--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         </br>
           </br>
           </br>
-<br><h5>Discord: @unfriended227</h5></br>
+<br><h5>Discord: @.no.escape.exe</h5></br>
       </center>
 
    
