--- a/shop.html
+++ b/shop.html
@@ -44,7 +44,7 @@
         </br>
           </br>
           </br>
-           <h5>Contact @.no.escape.exe on discord to negotiate prices</h5></br>
+           <h5>Contact @dataleaks. on discord to negotiate prices</h5></br>
 <br><h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Multi Purpose OSINT Tool 
 (Social Media Intelligence, Phone Number Lookups, People Search, Databreach Checkers And Search Engines, Imagery Intelligence Tools, IP Lookups, Metadata Scrapers, Web Crawlers And More.)</h5></br>
 <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Brute Force Tool 
