--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
           </br>
           </br>
 <br><h5>Discord: @dataleaks.</h5></br>
+<br><h5> Alt Discord: @.implications.so.clear.</h5></br>
       </center>
 
    
