--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,7 @@
         </br>
           </br>
           </br>
-<br><h5>Discord: @dataleaks.</h5></br>
-<br><h5> Alt Discord: @.implications.so.clear.</h5></br>
+<br><h5>Discord: @.implications.so.clear.</h5></br>
       </center>
 
    
