--- a/shop.html
+++ b/shop.html
@@ -44,8 +44,7 @@
         </br>
           </br>
           </br>
-           <h5>Contact @dataleaks. on discord to negotiate prices</h5></br>
-          <br><h5> Alt Discord: @.implications.so.clear.</h5></br>
+           <h5>Contact/Discord: @.implications.so.clear.</h5></br>
 <br><h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Multi Purpose OSINT Tool 
 (Social Media Intelligence, Phone Number Lookups, People Search, Databreach Checkers And Search Engines, Imagery Intelligence Tools, IP Lookups, Metadata Scrapers, Web Crawlers And More.)</h5></br>
 <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Brute Force Tool 
@@ -66,6 +65,7 @@ Nukes Discord Servers.</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ Discord Server Botting Tool</h5></br>
           <h5>⛧𝘛𝘰𝘱 𝘛𝘪𝘦𝘳 𝘛𝘳𝘰𝘭𝘭𝘦𝘳𝘴⛧ DOS Stressor & Http Flooder</h5></br>
           <h5>We Now Offer Penetration Testing And Scanning Websites For SQLI And XSS Vulnerabilities</h5>
+          <h5>Databrokers multi purpose OSINT tool discord user id to ip and more for finding databreaches on emails etc. 20$ BTC or LTC</h5>
       </center>
 
    
